# claiming_contracts_solana

./: .gitignore  Anchor.toml  README.md  package.json
admin-cli/: Cargo.toml
admin-cli/src/: main.rs
programs/claiming-factory/: Cargo.toml
programs/claiming-factory/src/: lib.rs
test_app/: package.json
test_app/src/services/claiming/: index.ts
tests/: claiming-factory.ts  init-merkle-tree.ts  merkle-tree.js  merkle-tree.ts
web3/claiming/: claiming_factory.devnet.json  claiming_factory.json  claiming_factory.ts  index.ts  package.json
web3/claiming-v2/: claiming_factory.json  claiming_factory.ts  index.ts
